assets/css/style.css
/* ... */
section.our-partners-sec {
    padding: 80px 0;
}
.secTitle.centerText{
    text-align: center;
}
.secTitle.centerText p {
    padding: 10px;
    text-align: center;
}
.secTitle.centerText h2 {
    text-align: center;
    font-size: 88px;
}
.secTitle.TextLeft{
    text-align: left;
}
.secTitle.TextLeft p {
    padding: 10px;
    text-align: left;
}
.secTitle.TextLeft h2 {
    text-align: left;
    font-size: 88px;
}
.PartnerItem {
    background: #F8F8F8;
    border-radius: 28px;
    padding: 24px;
}
.PartnerItem .partner-img img {
    width: 100%;
}
.PartnerItem .partner-info h4 {
    margin: 0;
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 26px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%;
    padding: 14px 0;
}
.partner-social-link {
    display: flex;
    align-items: center;
    gap: 8px;
}
.partner-social-link a {
    background: #fff;
    flex: 40px;
    border-radius: 10px;
    padding: 6px;
    text-align: center;
    display: block;
    max-width: 40px;
    height: 40px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}
.partner-social-link a img {
    margin: 0 auto;
    display: block;
    height: 13px;
}
.partnerSlideCol {
    padding: 0 16px;
}
.partner-slider {
    width: 100%;
    margin: 0 auto;
}
/* .partner-slider .slick-center .PartnerItem {
    background: #94B8FF;
} */
/* .partner-slider .slick-center {
    transform: scale(1.4);
} */
.partner-slider .slick-list.draggable {
    padding: 110px 0 !important;
}
.partner-slider ul.slick-dots li, .meet-mind-slider ul.slick-dots li, .fresh-update-slider ul.slick-dots li{
    list-style: none;
    padding: 0;
    font-size: 0;
    margin: 0 4px;
}

.partner-slider ul.slick-dots, .meet-mind-slider ul.slick-dots, .fresh-update-slider ul.slick-dots{
    margin: 0;
    padding: 0;
    display: flex !important;
    align-items: center;
    justify-content: center;
}
.partner-slider ul.slick-dots li button, .meet-mind-slider ul.slick-dots li button, .fresh-update-slider ul.slick-dots li button{
    display: none;
}
.partner-slider ul.slick-dots li, .meet-mind-slider ul.slick-dots li, .fresh-update-slider ul.slick-dots li {
    width: 8px;
    height: 8px;
    background: #EBEAEA;
    border-radius: 100%;
    cursor: pointer;
}
.partner-slider ul.slick-dots li.slick-active, .meet-mind-slider ul.slick-dots li.slick-active, .fresh-update-slider ul.slick-dots li.slick-active {
    background: #161616;
    width: 12px;
    height: 12px;
}
.partner-slider .control-c.slick-arrow, .meet-mind-slider .control-c.slick-arrow, .fresh-update-slider .control-c.slick-arrow {
    cursor: pointer;
    z-index: 3;
    position: absolute;
    bottom: -13px;
    background: #EBEAEA;
    display: flex;
    width: 80px;
    height: 40px;
    padding: 6px;
    border-radius: 20px;
    text-align: center;
    align-items: center;
}
.partner-slider .control-c.slick-arrow, .meet-mind-slider .control-c.slick-arrow, .fresh-update-slider .control-c.slick-arrow{
    padding: 13px;
}

.partner-slider .control-c.a-right, .meet-mind-slider .control-c.a-right, .fresh-update-slider .control-c.a-right {
    right: 38%;
}
.partner-slider .control-c.a-left, .meet-mind-slider .control-c.a-left, .fresh-update-slider .control-c.a-left{
    left: 38%;
}
.partner-slider .control-c.slick-arrow:hover, .meet-mind-slider .control-c.slick-arrow:hover, .fresh-update-slider .control-c.slick-arrow:hover{
    background: #000;
}
.partner-slider .control-c.slick-arrow img, .meet-mind-slider .control-c.slick-arrow img, .fresh-update-slider .control-c.slick-arrow img{
    margin: 0 auto;
    width: 16px;
}
.partner-slider .control-c.slick-arrow:hover img, .meet-mind-slider .control-c.slick-arrow:hover img, .fresh-update-slider .control-c.slick-arrow:hover img{
    filter: contrast(0);
}
.getYown-img video,
.getYown-img img {
    width: 100%;
    display: block !important;
}
.pT-40{
    padding-top: 40px;
}
section.getyour-sec {
    background: #03c5fd;
    padding: 90px 0;
    position: relative;
    min-height: 50vw;
    display: flex;
    align-content: center;
}

section.getyour-sec video {
    position: absolute;
    top: 0;
    left: auto;
    right: 0;
    height: 100%;
    max-width: 50%;
}

@media screen and (max-width: 767px) {
    section.getyour-sec {
        display: block;
    }
    section.getyour-sec video {
        max-width: 100%;
        position: relative;
    }
}

section.getyour-sec .secTitle.TextLeft {
    /*padding-bottom: 70px;*/
}
/* .colItem {
    padding: 15px;
} */
.colItem .col-item-img {
    background: #fff;
    border-radius: 16px;
    padding: 20px;
    text-align: center;
    min-height: 350px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.colItem .col-item-img img {
    width: 100%;
    max-width: 165px;
}
.col-item-text h4 {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 50px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%;
    letter-spacing: -1px;
    /* text-transform: uppercase; */
    margin: 0;
}
.col-item-text p {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 140%;
    margin: 0;
    padding: 18px 0;
}
.col-item-text a svg {
    margin-left: 11px;
}

.col-item-text a {
    border-radius: 100px;
    background: #FFF;
    padding: 13px 24px;
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 18px;
}
.col-item-text .pinkBtn{
    background: #fff;
    color: #231F20;
    position: relative;
}
.col-item-text .pinkBtn:hover {
    background: #ff007a;
    color: #fff;

}
.col-item-text .pinkBtn img.cursor-icon {
    position: absolute;
    bottom: -60px;
    right: 0;
    width: 36px;
}
.col-item-text .pinkBtn svg path {
    stroke: #fff;
}
section.the-key-start {
    padding: 90px 0;
}
/* ... */

